plugins {
    id ('java')
    id ('java-library')
    id ('org.springframework.boot') version '3.0.0'
}

subprojects {

    group = 'in.pervush'
    version = '3.0.7'

    sourceCompatibility = JavaVersion.VERSION_19
    targetCompatibility = JavaVersion.VERSION_19

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'

    repositories {
        mavenCentral()
    }

    sourceSets {
        main {
            resources {
                exclude 'application.yml'
                exclude 'logback.xml'
            }
        }
    }

    dependencies {
        implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.0.0')
        implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.0')
        implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.0.0')

        implementation(group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2')

        implementation(group: 'org.springframework', name: 'spring-jdbc', version: '6.0.3')
        implementation(group: 'org.postgresql', name: 'postgresql', version: '42.5.1')
        implementation(group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1')
        implementation(group: 'org.mybatis', name: 'mybatis', version: '3.5.11')
        implementation(group: 'org.mybatis', name: 'mybatis-spring', version: '3.0.1')
        implementation(group: 'org.liquibase', name: 'liquibase-core', version: '4.17.2')
        implementation(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36')
        implementation(group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.2')
        implementation(group: 'commons-validator', name: 'commons-validator', version: '1.7')
        implementation(group: 'com.google.guava', name: 'guava', version: '31.1-jre')
        implementation(group: 'com.auth0', name: 'java-jwt', version: '4.2.1')

        testImplementation(group:'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.1')
        testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.7.5')
        testImplementation(group: 'org.testcontainers', name: 'postgresql', version: '1.17.5')

        annotationProcessor(group: 'org.projectlombok', name: 'lombok', version: '1.18.24')

        compileOnly(group: 'org.projectlombok', name: 'lombok', version: '1.18.24')

        testAnnotationProcessor(group: 'org.projectlombok', name: 'lombok', version: '1.18.24')
    }

    test {
        useJUnitPlatform()
    }

}

bootJar {
    enabled = false
}

jar {
    enabled = false
}